--- a/style.css
+++ b/style.css
@@ -58,12 +58,12 @@ body{
     font-family: 'Urbanist', sans-serif;
 }
 html{
-    scroll-behavior: smooth;
+    scroll-behavior: calc(2s)
 }
 header {
     position: relative;
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
     width:100%;
     max-width:2900px;
     margin: auto;
@@ -85,12 +85,14 @@ header {
     display:flex;
     justify-content: space-between;
     position: fixed;
+    align-items: center;
     right: 0;
+    left: 0;
+    top: 0;
     z-index: 99;
     width: 100%;
-    max-width: 1440px;
+    max-width: 1540px;
     margin: auto;
-    align-items: center;
     background-color:#001D47;
     height: 50px;
     padding: 18px 50px 18px 50px;
@@ -99,21 +101,26 @@ header {
     color:#fff;
     display: flex;
     justify-content: space-between;
-    width: 53vw;
+    width: 100%;
+    max-width: 1200px;
     margin: auto;
-    right: 0;
-    margin-right: 0;
     align-items: center;  
     background-color:#001D47;  
+}
+.nonebar{
+    display: block;
+    position: relative;
+    background-color: transparent;
+    width: 0px;
 }
 .menu-linksbtn ul{
     list-style: none;
     display: flex;
     margin: 0 auto;
     justify-content:space-between;
-    width:400px;
+    width:330px;
     text-align: center;
-    margin-left: -30px;
+    margin-right: -270px;
 }
 .menu-linksbtn a {
     display:block;
@@ -140,7 +147,7 @@ header {
     align-items: center;
     margin: 0 auto;
     justify-content:space-between;
-    width:290px;
+    width:260px;
     text-align: center;
 }
 .menusocial ul a {
@@ -154,6 +161,7 @@ header {
     gap: 8px;
     background-color: #FFBE50;
     border-radius: 72px;
+    margin-right: 6px;
 }
 .menusocial a:first-child{
     color:#002A68;
@@ -219,13 +227,13 @@ header {
     }
     .menu-links ul{
         display: block;
+        margin-right: 10px;
     }
     .menu-links a {
     padding:.25rem 2rem
     }
     .menu-linksbtn{
         display: flex;
-        margin-left: 20;
     }
     .menusocial ul{
         display: flex;
@@ -268,6 +276,7 @@ header {
     text-align: right;
     align-items: end;
     }   
+    .nonebar{display: none}
 }
 .postercontainer{
     position: relative;
@@ -302,7 +311,8 @@ header {
 .posterimglogo img{
     display: block;
     width: 100%;
-    width: 485px;
+    min-width: 430px;
+    max-width: 485px;
     margin: auto;
 }
 .infostext{
@@ -313,7 +323,7 @@ header {
     position: absolute;
     display: block;
     width: 640px;
-    color: var(--6th-high, #FFF);
+    color: #FFF;
     font-family: 'Urbanist', sans-serif;
     font-size: 70px;
     font-weight: 400;
@@ -333,40 +343,52 @@ header {
     margin-right: 10px;
     color: #FFF;
     font-family: 'Outfit', sans-serif;
-    font-size: clamp(0.9vw, 1.206vw, 1.204vw);
+    font-size: 24px;
     font-weight: 400;
     line-height: 130%;
 }
  @media screen and (max-width:1200px) {
     .bgposter{
-        height: 100%;
+        height: 90%;
     }
     .infos{
-        max-width: 890px;
-        padding: 0 50px 0 50px;
+        flex-direction: row;
+        max-width: 350px;
+        padding: 0;
+        text-align: center;
     }
-    .posterimglogo{
-        max-width: 280px;
-        top: 17%;
+    .posterimglogo {
+        margin: auto;
+        top: 5%;
+        left: 50%;
+        transform: translateX(-50%);
+        justify-content: center;
+        align-items: center;
     }
     .posterimglogo img{
         max-width: 300px;
+        margin: auto;
     }
     .postercontainer h3{
-        top: 20%;
-        width: 393px;
-        font-size: 4vw;
+        width: 293px;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 32px;
     }
     .postercontainer h3 span:first-child{
         text-decoration:underline#ffbe50;
-        text-underline-offset: 10px;
+        text-underline-offset: 5px;
     }
     .postercontainer p{
-        width: 250px;
-        padding-top: 20px;
-        font-size: 22px;
+        top:75%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 293px;
+        padding-top: 15px;
+        font-size: 16px;
         font-weight: 400;
-        top: 58%;
+        line-height: 130%;
     }
 }
 @media screen and (max-width:700px) {
@@ -377,6 +399,7 @@ header {
         flex-direction: row;
         max-width: 350px;
         padding: 0;
+        text-align: center;
     }
     .posterimglogo {
         margin: auto;
@@ -402,7 +425,7 @@ header {
     .postercontainer p{
         top:75%;
         left: 15%;
-        width: 270px;
+        width: 293px;
         padding-top: 15px;
         font-size: 16px;
         font-weight: 400;
@@ -854,11 +877,10 @@ padding-left: 0;
     max-width: 236px;
 }
 .diferencesgrid.reveal{
-    transform: translateX(100%);
+    transform: translateX(-100%);
     opacity: 0;
     transition: 1s all ease;
 }
-  
 .diferencesgrid.reveal.active{
     transform: translateX(-50%);
     opacity: 1;
@@ -1229,7 +1251,7 @@ padding-left: 0;
 .contact{
     position: absolute;
     z-index: 5;
-    top: 10%;
+    top: 17%;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
@@ -1264,15 +1286,18 @@ padding-left: 0;
 .contactinfo img{
     display: block;
     width: 100%;
-    max-width: 450px;
+    max-width: 650px;
     margin: auto;
-    margin-top: 200px;
+    top: 50%;
+    transform: translateY(50%);
 }
 .form{
     color: #fff;
     display: block;
     width: 660px;
     right: 0;
+    top: 50%;
+    transform: translateY(20%);
     margin: auto;
     height: 300px;
     background-color: transparent;
@@ -1282,7 +1307,7 @@ form {
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap:17px;
     background-color: transparent;
 }
 #form input, textarea{
@@ -1291,8 +1316,11 @@ form {
     list-style: none;
     border: 4px solid #fff;
     border-radius: 16px;
-    padding: 8px;
+    padding-left: 10px;
     background-color: #001e4718;
+}
+#form textarea{
+    padding: 30px;
 }
 #form input{
     height:  46px;    
@@ -1328,7 +1356,7 @@ form {
 .contactbgimg-m{
     display: none;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1100px) {
     .contactbgimg{
         display: none;
     }
@@ -1363,15 +1391,17 @@ form {
     }
     .contactinfo img{
         position: relative;
-        max-width: 380px;
-        top: 0;
+        max-width: 800px;
+        top: 50%;
+        transform: translateY(20%);
         margin-top: 0px;
         margin-left: 0px;
-        margin-bottom: 50px;
+        margin-bottom: 0px;
     }
     .form{
         position: relative;
-        top: 30;
+        top: 50%;
+        transform: translateY(90%);
         width: 550px;
         margin-right: auto;
         margin-left: auto;
@@ -1430,15 +1460,12 @@ form {
         z-index: 5;
         gap: 0px;
         width: 100%;
-        max-width: 1200px;
+        max-width: 700px;
         margin: auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
         padding: 0;
-        padding-top: 60px;
-        padding-right: 0;
-        padding-left: 0;
     }
     .contacttitle {
         display: flex;
@@ -1451,36 +1478,39 @@ form {
     .contacttitle h2{
         color: #FFF;
         font-family: 'Urbanist', sans-serif;
-        font-size: 14px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 700;
         line-height: 100%;     
         padding-bottom: 5px;
     }
     .contacttitle svg{
-        max-width: 80px;
+        max-width: 100px;
     }
     .contactinfo{
         margin: auto
     }
     .contactinfo img{
         position: relative;
-        width: 180px;
-        top: 0;
+        max-width: 240px;
+        top: 50%;
+        transform: translateY(30%);
         margin-top: 0px;
         margin-left: 0px;
-        margin-bottom: 50px;
+        margin-bottom: 0px;
     }
     .form{
         position: relative;
-        top: -20;
+        top: 50%;
         width: 350px;
         margin-right: auto;
         margin-left: auto;
         background-color: transparent;
+        top: 50%;
+        transform: translateY(30%);
     }
     form {
-        padding-top: 20;
+        padding-top: 10;
         width: 100%;
         max-width: 350px;
         list-style: none;
@@ -1491,18 +1521,15 @@ form {
         flex-direction: column;
         background-color: transparent;
         justify-content: center;
+        gap:10px;
     }
     #form input, textarea{
-        width: 100%;
         font-size: 10px;
-        list-style: none;
-        border: 4px solid #fff;
-        border-radius: 16px;
-        padding: 12px;
-        background-color: #001e4718;
+        padding-left: 10px;
     }
     #form textarea{
         height:110px;
+        padding: 10px;
     }
     #form input{
         height:  36px;    
@@ -1510,9 +1537,9 @@ form {
     #form button{
         left: 50%;
         transform: translateX(100%);
-        margin-top: 8px;
+        margin-top: 5px;
         width: 119px;
-        font-size: 10px;
+        font-size: 12px;
         font-weight: 500;
     }
     .formgroup1, .formgroup2{
