--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ font-family: 'Urbanist', sans-serif;
 }
 body{
     font-family: 'Urbanist', sans-serif;
+    scroll-behavior: calc(2s)
 }
 html{
     scroll-behavior: calc(2s)
@@ -463,7 +464,6 @@ header {
     width: 100%;
     max-width: 1240px;
     margin: auto;
-    border-bottom: 2px solid #FFBE50;
     display: flex;
     justify-content: space-between;
     padding: 100px 50px 55px 50px;
@@ -472,6 +472,7 @@ header {
     width: 100%;
     max-width: 1340px;
     margin: auto;
+    border-top: 2px solid #FFBE50;
     display: flex;
     justify-content: space-between;
     padding: 50px 50px 40px 50px;
@@ -483,7 +484,6 @@ header {
     font-family: 'Urbanist', sans-serif;
     font-size: 40px;
     font-weight: 700;
-    line-height: 100%; /* 40px */
 }
 .mission p{
     width: 744px;
@@ -521,7 +521,6 @@ header {
     font-size: 20px;
     font-style: normal;
     font-weight: 600;
-    line-height: 100%; /* 20px */
 }
 #missioncard1{    
     width: 232px;
@@ -532,7 +531,7 @@ header {
 #missioncard3{
     width: 189px;
 }
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 970px) {
 .mission {
     display: flex;
     flex-direction: column;
@@ -576,7 +575,6 @@ padding-bottom: 0px;
     opacity: 0;
     transition: 1s all ease;
 }
-  
 .reveal.active{
     transform: translateY(0);
     opacity: 1;
@@ -627,7 +625,6 @@ padding-bottom: 0px;
     }
 
 }
-
 .servicescontainer{
     position: relative;
     background: #F3F3F3;
@@ -639,17 +636,15 @@ padding-bottom: 0px;
     width: 100%;
     max-width: 1340px;
     margin: auto;
-    padding: 0 50px 0 50px;
 }
 .servicestitle{
     width: 100%;
-    max-width: 1240px;
+    max-width: 1340px;
     margin: auto;
-    padding-top: 50px;
-    padding-bottom: 40px;
     border-bottom: 2px solid #FFBE50;
     display: flex;
     justify-content: space-between;
+    padding: 50px 50px 40px 50px;
 }
 .servicestitle h2{
     width: 249px;
@@ -671,12 +666,11 @@ padding-bottom: 0px;
 }
 .servicesgrid{
     width: 100%;
-    max-width: 1240px;
+    max-width: 1340px;
     margin: auto;
-    padding-top: 50px;
-    padding-bottom: 40px;
     display: flex;
     justify-content: space-around;
+    padding: 50px 50px 40px 50px;
 }
 .servicescard{
     position: relative;
@@ -755,7 +749,7 @@ padding-bottom: 0px;
     font-weight: 400;
     line-height: 130%;
 }
-@media screen and (max-width:970px) {
+@media screen and (max-width:970px) {    
 .servicestitle {
     display: flex;
     flex-direction: column;
@@ -823,6 +817,17 @@ padding-left: 0;
     font-weight: 400;
     line-height: 130%;
 }
+.servicescard:hover,
+.servicescard.active {
+    max-width: 169px;
+  transition: 0.5s ease;
+  letter-spacing: 1px;
+}
+.servicescard:hover > img{
+    max-width: 169px;
+    transition: 0.5s ease;
+    letter-spacing: 1px;
+}
 }
 .diferences{
     position: relative;
@@ -889,6 +894,16 @@ padding-left: 0;
     transform: translateX(-50%);
     opacity: 1;
 }
+.diferencecard:hover,
+.diferencecard.active {
+  transition: 0.5s ease;
+  letter-spacing: 1px;
+}
+.diferencecard:hover > svg{
+    width: 179px;
+    height: 170px;
+    transition: 0.5s ease;
+}
 @media screen and (max-width: 770px) {
     .diferencesgrid{
         top: 30%;
@@ -910,6 +925,16 @@ padding-left: 0;
     #diferencecard3 h2{
         padding: 0px;
         max-width: 136px;
+    }
+    .diferencecard:hover,
+    .diferencecard.active {
+      transition: 0.5s ease;
+      letter-spacing: 1px;
+    }
+    .diferencecard:hover > svg{
+        width: 75px;
+        height: 65px;
+        transition: 0.5s ease;
     }
 }
 .testimonies{
@@ -1000,6 +1025,20 @@ padding-left: 0;
     transform: translateX(0%);
     opacity: 1;
 }
+.testemonycard:hover,
+.testemonycard.active {
+    width: 355px;
+    height: 218px;
+  transition: 0.5s ease;
+}
+.testemonycard:hover > p{
+    font-size: 14.2px;
+    transition: 0.5s ease;
+}
+.testemonycard:hover > h2{
+    font-size: 24.5px;
+    transition: 0.5s ease;
+}
 @media screen and (max-width: 970px) {
 .testemonies {
     display: flex;
@@ -1061,6 +1100,20 @@ padding-left: 0;
 .testemonycard p{
     padding-top: 8px;
     font-size: 15px;
+}
+.testemonycard:hover,
+.testemonycard.active {
+    width: 345px;
+    height: 210px;
+  transition: 0.5s ease;
+}
+.testemonycard:hover > p{
+    font-size: 15.2px;
+    transition: 0.5s ease;
+}
+.testemonycard:hover > h2{
+    font-size: 20.5px;
+    transition: 0.5s ease;
 }
 }
 .vetor{
@@ -1164,7 +1217,7 @@ padding-left: 0;
     margin-top: 70px;
     width: 263px;
 }
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 1070px) {
 .preference {
     display: flex;
     flex-direction: column;
