--- a/style.css
+++ b/style.css
@@ -349,25 +349,35 @@ header {
     line-height: 130%;
 }
 @media screen and (max-width:1240px) {
+    .infos{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 1340px;
+        margin: auto;
+        z-index: 1;
+        justify-content: space-between;
+        padding: 0 100px 0 100px;
+    }
     .posterimglogo{
-        top: 10%;
+        top: 20%;
     }
     .posterimglogo img{
-        min-width: 350px;
-        max-width: 385px;
+        min-width: 290px;
+        max-width: 305px;
     }
     .postercontainer h3{
-        width: 620px;
-        font-size: 60px;
-        top: 20%;
+        width: 520px;
+        font-size: 50px;
+        top: 23%;
     }
     .postercontainer h3 span:first-child{
         text-underline-offset: 13px;
     }
     .postercontainer p{
-        top: 33vw;
-        width: 311px;
-        font-size: 22px;
+        top: 30vw;
+        width: 261px;
+        font-size: 20px;
         line-height: 125%;
     }
 
@@ -1386,7 +1396,7 @@ padding-left: 0;
     width: 660px;
     right: 0;
     top: 50%;
-    transform: translateY(50%);
+    transform: translateY(35%);
     margin: auto;
     height: 300px;
     background-color: transparent;
